--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "symfony/dotenv": "^4.3",
+        "brainmaestro/composer-git-hooks": "^2.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -19,7 +21,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phpspec/phpspec": "2.2.1"
     },
     "config": {
         "optimize-autoloader": true,
@@ -28,7 +31,10 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": ["laravel/dusk"]
+        },
+        "hooks": {
+            "pre-commit": "composer my-script"
         }
     },
     "autoload": {
@@ -48,15 +54,19 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+        "my-script": [
+            "vendor/bin/php-cs-fixer fix --diff --ansi",
+            "vendor/bin/phpunit --color=always"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     }
 }
